Set up index page, folders and style css

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <header>
 
     </header>
+
     <section>
 
     </section>
-    <footer></footer>
+    
+    <footer>
+
+    </footer>
 </body>
 </html>
