--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rosie</title>
 </head>
@@ -23,17 +23,17 @@
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <ul id="nav" class="list-inline menucontainer">
-                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
+                        <ul id="nav" class="list-inline menucontainer row">
+                            <li class="col-6 col-sm-3 ui-menu-color-home menuitem">
                                 <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
+                            <li class="col-6 col-sm-3 ui-menu-color-resume menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
+                            <li class="col-6 col-sm-3  ui-menu-color-contact menuitem">
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
+                            <li class="col-6 col-sm-3 ui-menu-color-download menuitem">
                                 <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
@@ -48,7 +48,7 @@
                 <div class="row">
                     <div class="col-12">
                         <h3 class="history-heading uppercase">
-                            Work Histroy
+                            Work History
                         </h3>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                     <div class="timeline-item" data-dates="02/1998 - 04/2004">
                         <h4>National College of Art and Design (NCAD)</h4>
                         <p>Sculptor in residence</p>
-                    </div> 
+                    </div>
                     <div class="timeline-item" data-dates="04/2004 - 06/2008">
                         <h4>Fisher and Diaz Funeral Directors</h4>
                         <p>Junior Embalmer</p>
@@ -141,14 +141,14 @@
                 </div>
             </div>
         </div>
+        
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full Stack web Developer, Not yet skill in everything. Enjoying
-                    the coding insitute course.
+                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
                 </p>
             </div>
             <div class="col-sm-4">
@@ -179,7 +179,7 @@
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">Linkedin</span>
+                            <span class="sr-only">LinkedIn</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
@@ -197,7 +197,7 @@
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">Youtube</span>
+                            <span class="sr-only">YouTube</span>
                         </a>
                     </li>
                 </ul>
